# chiral-network

src-tauri/: Cargo.toml
src-tauri/src/: bittorrent.rs  dht.rs  e2e_api.rs  ethereum.rs  file_transfer.rs  headless.rs  lib.rs  main.rs  multi_source_download.rs  webrtc_service.rs
src/lib/components/download/: PaymentCheckpointModal.svelte
src/lib/services/: p2pFileTransfer.ts
src/pages/: Download.svelte  Network.svelte  Relay.svelte  Settings.svelte
tests/e2e/: real-network.test.ts
upnp-test/: Cargo.toml  README.md
upnp-test/src/: main.rs
