[package]
name = "upnp-test"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "upnp", "ping", "identify", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

